@@ -6,7 +6,7 @@
 # Copyright (c) 1998-2000 Ajuba Solutions.
 # All rights reserved.
 #
-# RCS: @(#) $Id: canvas.test,v 1.23 2004/12/07 21:22:19 dgp Exp $
+# RCS: @(#) $Id: canvas.test,v 1.23.4.1 2010/01/19 22:02:43 dkf Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -366,6 +366,15 @@ test canvas-10.12 {multple events bound to same tag expr} -setup {
 } -body {
     .c bind {a && b} <Enter> {puts Enter}
     .c bind {a && b} <Leave> {puts Leave}
+} -result {}
+test canvas-10.13 {more long tag searches; Bug 2931374} -setup {
+    catch {destroy .c}
+    canvas .c
+} -body {
+    .c find withtag {(A&&B&&C&&D)&&area&&!text}
+    # memory errors on failure
+} -cleanup {
+    destroy .c
 } -result {}
 
 test canvas-11.1 {canvas poly fill check, bug 5783} -setup {
